# kubevirt

./: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  WORKSPACE  go.mod  go.sum
bazel/patches/: bazeldnf.patch  rules_docker.patch
cmd/virt-launcher/: BUILD.bazel
hack/: bootstrap.sh
images/winrmcli/: BUILD.bazel
pkg/virt-launcher/virtwrap/launchsecurity/: BUILD.bazel
rpm/: BUILD.bazel
