bazel_dep(name = "rules_python", version = "1.3.0")
bazel_dep(name = "buildifier_prebuilt", version = "8.0.3")
bazel_dep(name = "rules_proto", version = "7.1.0")
bazel_dep(name = "rules_go", version = "0.54.0", repo_name = "io_bazel_rules_go")
bazel_dep(name = "gazelle", version = "0.43.0", repo_name = "bazel_gazelle")
bazel_dep(name = "rules_multirun", version = "0.11.0")
bazel_dep(name = "bazeldnf", version = "v0.7.0-alpha2")
single_version_override(
    module_name = "bazeldnf",
    patch_strip = 1,
    patches = [
        "@//bazel:patches/bazeldnf.patch",
    ],
)

bazel_dep(name = "rules_pkg", version = "1.1.0")

go_sdk = use_extension("@io_bazel_rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(
    version = "1.23.4",
)
go_sdk.nogo(
    nogo = "@//:nogo_vet",
)
use_repo(
    go_sdk,
    "go_toolchains",
    "io_bazel_rules_nogo",
)

register_toolchains("@go_toolchains//:all")

go_deps = use_extension("@bazel_gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(
    go_deps,
    "cc_mvdan_sh_v3",
    "com_github_cheggaaa_pb_v3",
    "com_github_containerd_stargz_snapshotter",
    "com_github_containerd_stargz_snapshotter_estargz",
    "com_github_containernetworking_cni",
    "com_github_containernetworking_plugins",
    "com_github_containers_common",
    "com_github_coreos_go_semver",
    "com_github_docker_cli",
    "com_github_emicklei_go_restful_v3",
    "com_github_evanphx_json_patch",
    "com_github_fsnotify_fsnotify",
    "com_github_ghodss_yaml",
    "com_github_go_kit_kit",
    "com_github_go_openapi_spec",
    "com_github_go_openapi_strfmt",
    "com_github_go_openapi_validate",
    "com_github_gogo_protobuf",
    "com_github_golang_mock",
    "com_github_golang_protobuf",
    "com_github_google_go_containerregistry",
    "com_github_google_go_github_v32",
    "com_github_google_goexpect",
    "com_github_google_gofuzz",
    "com_github_google_goterm",
    "com_github_google_uuid",
    "com_github_gordonklaus_ineffassign",
    "com_github_gorilla_websocket",
    "com_github_imdario_mergo",
    "com_github_insomniacslk_dhcp",
    "com_github_k8snetworkplumbingwg_network_attachment_definition_client",
    "com_github_kisielk_errcheck",
    "com_github_krolaw_dhcp4",
    "com_github_kubernetes_csi_external_snapshotter_client_v4",
    "com_github_kubevirt_monitoring_pkg_metrics_parser",
    "com_github_kylelemons_godebug",
    "com_github_machadovilaca_operator_observability",
    "com_github_masterzen_winrm_cli",
    "com_github_mdlayher_vsock",
    "com_github_mitchellh_go_ps",
    "com_github_mitchellh_go_vnc",
    "com_github_moby_sys_mountinfo",
    "com_github_nunnatsa_ginkgolinter",
    "com_github_nxadm_tail",
    "com_github_onsi_ginkgo_v2",
    "com_github_onsi_gomega",
    "com_github_opencontainers_runc",
    "com_github_opencontainers_selinux",
    "com_github_openshift_api",
    "com_github_openshift_client_go",
    "com_github_openshift_library_go",
    "com_github_operator_framework_operator_lifecycle_manager",
    "com_github_packer_community_winrmcp",
    "com_github_pkg_errors",
    "com_github_povsister_scp",
    "com_github_prometheus_client_golang",
    "com_github_prometheus_client_model",
    "com_github_prometheus_common",
    "com_github_prometheus_operator_prometheus_operator_pkg_apis_monitoring",
    "com_github_prometheus_procfs",
    "com_github_spf13_cobra",
    "com_github_spf13_pflag",
    "com_github_vishvananda_netlink",
    "com_github_wadey_gocovmerge",
    "in_gopkg_yaml_v2",
    "io_k8s_api",
    "io_k8s_apiextensions_apiserver",
    "io_k8s_apimachinery",
    "io_k8s_client_go",
    "io_k8s_kube_aggregator",
    "io_k8s_kube_openapi",
    "io_k8s_kubectl",
    "io_k8s_sigs_controller_runtime",
    "io_k8s_sigs_json",
    "io_k8s_sigs_yaml",
    "io_k8s_utils",
    "io_kubevirt_api",
    "io_kubevirt_client_go",
    "io_kubevirt_containerized_data_importer_api",
    "io_kubevirt_qe_tools",
    "org_golang_google_grpc",
    "org_golang_x_crypto",
    "org_golang_x_net",
    "org_golang_x_sync",
    "org_golang_x_sys",
    "org_golang_x_term",
    "org_golang_x_time",
    "org_golang_x_tools",
    "org_libvirt_go_libvirt",
    "org_libvirt_go_libvirtxml",
)

bazel_dep(name = "bazel_skylib", version = "1.7.1")
bazel_dep(name = "bazel_skylib_gazelle_plugin", version = "1.7.1")
bazel_dep(name = "rules_python_gazelle_plugin", version = "1.3.0")
bazel_dep(name = "bazel_features", version = "1.28.0")
bazel_dep(name = "rules_cc", version = "0.1.1")
